syntax = "proto3";

package taskPackage;

message Task {
  string id = 1;
  string division = 2;
  string employeeId = 3;
  string shiftId = 4;
  string managerId = 5;
  int32 allocatedTimeMin = 6;
  string specialRequests = 7;
  bool completed = 8;
  string rejectionReason = 9;
  }

message TaskRequest {
  string id = 1;
}

message AllTaskRequest {}

message TaskResponsePayload {
  int32 status = 1;
  Task data = 2;
}

message AllTaskResponsePayload {
  int32 status = 1;
  repeated Task data = 2;
}

message Employee {
  string id = 1;
  string division = 2;
  int32 numberTasks = 3;
  string email = 4;
}

message EmployeeResponsePayload {
  int32 status = 1;
  Employee data = 2;
}

message EmployeeRequest {
  string id = 1;
}
message AllEmployeeResponsePayload {
  int32 status = 1;
  repeated Employee data = 2;
}

message AllEmployeeRequest {}
service TaskService {
  rpc GetTask(TaskRequest) returns (TaskResponsePayload){};
  rpc GetAllTasks(AllTaskRequest) returns (AllTaskResponsePayload){}
  rpc CreateTask (Task) returns (TaskResponsePayload){}
  rpc UpdateTask (Task) returns (TaskResponsePayload){}
  rpc DeleteTask (TaskRequest) returns (TaskResponsePayload){}
  rpc GetEmployee (EmployeeRequest) returns (EmployeeResponsePayload){}
  rpc GetAllEmployees(AllEmployeeRequest) returns (AllEmployeeResponsePayload){}

}